syntax = "proto3";

package animal_posts;

// Service definition
service AnimalPostService {
    rpc CreateAnimalPost (CreateAnimalRequest) returns (CreateAnimalResponse);
    rpc UpdateAnimalPost (UpdateAnimalRequest) returns (UpdateAnimalResponse);
    rpc GetAnimals (Empty) returns (AnimalListResponse);
    rpc DeleteAnimalPost (DeleteAnimalRequest) returns (DeleteAnimalResponse);
    rpc CheckStatus (Empty) returns (StatusResponse);
}

// request messages
message CreateAnimalRequest {
    string title = 1;
    string description = 2;
    string location = 3;
    string status = 4;
    string images = 5;
}

message CreateAnimalResponse {
    int32 postId = 1;
    string message = 2;
}

message UpdateAnimalRequest {
    int32 postId = 1;
    string title = 2;
    string description = 3;
    string location = 4;
    string status = 5;
    string images = 6;
}

message UpdateAnimalResponse {
    string message = 1;
}

message DeleteAnimalRequest {
    int32 postId = 1;
}

message DeleteAnimalResponse {
    string message = 1;
}

message Empty {}

message AnimalListResponse {
    repeated AnimalPost posts = 1;
    string source = 2;  
}

message AnimalPost {
    int32 postId = 1;
    string title = 2;
    string description = 3;
    string location = 4;
    string status = 5;
    string images = 6;
}

message StatusResponse {
    string status = 1;
}
